@@ -18,6 +18,15 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>provided</scope>
+        </dependency>
+
+
         <dependency>
             <groupId>run.mone</groupId>
             <artifactId>docean</artifactId>
@@ -49,14 +58,11 @@
         </dependency>
 
 
-
         <dependency>
             <groupId>run.mone</groupId>
             <artifactId>hera-tspandata</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
-
-
 
 
         <dependency>
@@ -71,12 +77,6 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
-<!--            <scope>provided</scope>-->
-        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -131,6 +131,20 @@
         </resources>
 
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <compilerVersion>20</compilerVersion>
+                    <source>20</source>
+                    <target>20</target>
+                </configuration>
+            </plugin>
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
